@@ -144,7 +144,7 @@ public final class KSMetaData
 
     public static KSMetaData inflate(org.apache.cassandra.db.migration.avro.KsDef ks)
     {
-        Class<AbstractReplicationStrategy> repStratClass;
+        Class<? extends AbstractReplicationStrategy> repStratClass;
         try
         {
             String strategyClassName = convertOldStrategyName(ks.strategy_class.toString());
@@ -160,7 +160,16 @@ public final class KSMetaData
         {
             for (Map.Entry<CharSequence, CharSequence> e : ks.strategy_options.entrySet())
             {
-                strategyOptions.put(e.getKey().toString(), e.getValue().toString());
+                String name = e.getKey().toString();
+                // Silently discard a replication_factor option to NTS.
+                // The history is, people were creating CFs with the default settings (which in the CLI is NTS) and then
+                // giving it a replication_factor option, which is nonsensical.  Initially our strategy was to silently
+                // ignore this option, but that turned out to confuse people more.  So in 0.8.2 we switched to throwing
+                // an exception in the NTS constructor, which would be turned into an InvalidRequestException for the
+                // client.  But, it also prevented startup for anyone upgrading without first cleaning that option out.
+                if (repStratClass == NetworkTopologyStrategy.class && name.trim().toLowerCase().equals("replication_factor"))
+                    continue;
+                strategyOptions.put(name, e.getValue().toString());
             }
         }
         maybeAddReplicationFactor(strategyOptions, ks.strategy_class.toString(), ks.replication_factor);
