@@ -5,7 +5,9 @@
  * refuse counter write for CL.ANY (CASSANDRA-2990)
  * switch back to only logging recent dropped messages (CASSANDRA-3004)
  * fix issues with parameters being escaped incorrectly in Python CQL (CASSANDRA-2993)
- * force to always deseriale RowMutation for counters (CASSANDRA-3006)
+ * always deserialize RowMutation for counters (CASSANDRA-3006)
+ * ignore saved replication_factor strategy_option for NTS (CASSANDRA-3011)
+
 
 0.8.3
  * add ability to drop local reads/writes that are going to timeout
